# safe-hash-rs

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  RELEASE_CHECKLIST.md  deno.json  dist-workspace.toml  rustfmt.toml
.github/workflows/: cargo.yml  release.yml
crates/safe-hash/: Cargo.toml
crates/safe-hash/src/: api.rs  cli.rs  etherscan.rs  main.rs  message_checks.rs  msg_signing.rs  output.rs  sign_checks.rs  tx_file.rs  tx_signing.rs  warn.rs
crates/safe-utils/: Cargo.toml  build.rs
crates/safe-utils/src/: abi_dec.rs  chains.rs  eip712.rs  hasher.rs  lib.rs  version.rs
crates/safe-utils/tests/: hasher_tests.rs
crates/verifier/: Cargo.toml
crates/verifier/src/: cli.rs  exec_checks.rs  main.rs  message_checks.rs  sign_checks.rs  tx_file.rs  warn.rs
docs/: PODMAN.md
references/: safe_hashes.sh
scripts/: gen-ts-eel.sh  podman-build.sh  podman-run.sh  safe-hash-rs  ts-eel.sh
test/: another_example.json  another_example2.json  another_example3.json  client_msg_response.json  client_tx_response.json  eip712_message.json  pat_eip712_message.json  sign_in_message.txt  test_message2.txt
ts-eel/: main.ts
