[workspace]
resolver = "2"

members = [ 
    "crates/safe-utils",
    "crates/verifier",
]


[workspace.dependencies]
semver = "1.0"
alloy = { version = "0.11.1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
