[workspace]
resolver = "2"

members = [ 
    "crates/safe-utils",
    "crates/safe-hash",
]


[workspace.dependencies]
semver = "1.0"
alloy = { version = "0.11.1", default-features = false, features = ["essentials", "dyn-abi", "eip712"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5.31", features = ["derive"] }
reqwest = { version = "0.12.2", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
color-print = "0.3"
cli-table = "0.4"
sty = "0.3"
dirs = "6"
safe-utils = { version = "0.0.17", path = "crates/safe-utils" }
target-triple = "0.1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
