[package]
name = "safe-hash"
version = "0.1.0"
edition = "2024"
default-run = "safe-hash"

[[bin]]
name = "safe-hash"
path = "src/main.rs"

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
color-print.workspace = true
cli-table.workspace = true
sty.workspace = true
safe-utils = { path = "../safe-utils"}
