[package]
name = "safe-hash"
version = "0.0.18"
edition = "2024"
default-run = "safe-hash"
repository = "https://github.com/Cyfrin/safe-hash-rs"
description = "Verify Safe Wallet Transactions and Messages"
homepage = "Verify Safe Wallet Transactions and Messages"

[[bin]]
name = "safe-hash"
path = "src/main.rs"

[dependencies]
alloy.workspace = true
serde.workspace = true
serde_json.workspace = true
clap.workspace = true
reqwest.workspace = true
tokio.workspace = true
color-print.workspace = true
cli-table.workspace = true
sty.workspace = true
semver.workspace = true
safe-utils = { workspace = true }

