[package]
name = "safe-utils"
version = "0.0.10"
edition = "2024"
publish = false
repository = "https://github.com/Cyfrin/safe-hash-rs"
description = "Verify Safe Wallet Transactions and Messages Utils"
homepage = "Verify Safe Wallet Transactions and Messages Utils"

[dependencies]
semver.workspace = true
alloy.workspace = true
serde_json.workspace = true
target-triple = { workspace = true }
reqwest.workspace = true
serde.workspace = true
dirs.workspace = true

[build-dependencies]
target-triple = { workspace = true }
